--- a/.github/workflows/initial-pipeline.yml
+++ b/.github/workflows/initial-pipeline.yml
@@ -27,11 +27,13 @@ jobs:
       - run: echo "- Simulate and test the artifact"
 
   development:
+    needs: test-artifact
     runs-on: ubuntu-latest
     steps:
       - run: echo "- Auto-deploy the artifact to the development environment"
         
   staging:
+    needs: [development, test-artifact]
     runs-on: ubuntu-latest
     steps:
       - run: |
@@ -46,7 +48,7 @@ jobs:
       - run: echo "- Test the staging environment"
         
   production:
-    needs: staging
+    needs: [staging, test-staging]
     runs-on: ubuntu-latest
     steps:
       - run: |
