--- a/.github/workflows/initial-pipeline.yml
+++ b/.github/workflows/initial-pipeline.yml
@@ -14,6 +14,7 @@ jobs:
       - run: echo "- Lint the code and run unit tests"
         
   build:
+    needs: integration
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -27,13 +28,13 @@ jobs:
       - run: echo "- Simulate and test the artifact"
 
   development:
-    needs: test-artifact
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - run: echo "- Auto-deploy the artifact to the development environment"
         
   staging:
-    needs: [development, test-artifact]
+    needs: [build, test-artifact]
     runs-on: ubuntu-latest
     steps:
       - run: |
@@ -58,6 +59,7 @@ jobs:
           echo "- Deploy the artifact to the production environment"
 
   test-production:
+    needs: production
     runs-on: ubuntu-latest
     steps:
       - run: echo "- Test the artifact in the production environment"
